--- a/exercicios/capitulo_05/while_loop.ipynb
+++ b/exercicios/capitulo_05/while_loop.ipynb
@@ -90,6 +90,48 @@
     "else:\n",
     "    print('Fim de jogo')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você está no estágio mais facil de todos.\n",
+      "Você passou do estágio:  2\n",
+      "Você passou do estágio:  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "estagio_atual = 0\n",
+    "estagio_final = 10\n",
+    "\n",
+    "while estagio_atual <= estagio_final:\n",
+    "    estagio_atual += 1\n",
+    "    if estagio_atual == 1:\n",
+    "        continue\n",
+    "    elif estagio_atual == 2:\n",
+    "        print('Você está no estágio mais facil de todos.')\n",
+    "    elif estagio_atual == 3:\n",
+    "        pass\n",
+    "    elif estagio_atual == 4:\n",
+    "        break\n",
+    "    print('Você passou do estágio: ', estagio_atual)\n",
+    "\n",
+    "else:\n",
+    "    print('Fim do jogo')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
