--- a/exercicios/capitulo_06/classes.ipynb
+++ b/exercicios/capitulo_06/classes.ipynb
@@ -9,11 +9,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Gato:\n",
+    "    def __init__(self, nome = 'Tony'):\n",
+    "        self.patas = 4\n",
+    "        self.cor = 'preto'\n",
+    "        self.nome = nome"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Defina uma variável de classe\n"
+    "- Defina uma variável de classe ##Também chamadas de variável estática"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Gato:\n",
+    "    cor = 'preta'\n",
+    "\n",
+    "    def __init__(self, nome = 'Tony'):\n",
+    "        self.patas = 4\n",
+    "        self.nome = nome"
    ]
   },
   {
@@ -25,6 +52,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frejat = Gato('Frejat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frejat.cor = 'Preto e Branco'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preto e Branco\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(frejat.cor)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -33,11 +95,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preta\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Gato.cor)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie uma variável privada\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Gato:\n",
+    "    _cor = 'pretO'\n",
+    "\n",
+    "    def __init__(self, nome = 'Tony'):\n",
+    "        self.patas = 4\n",
+    "        self.nome = nome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pretO'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Gato._cor"
    ]
   }
  ],
@@ -48,8 +161,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
