--- a/exercicios/capitulo_06/decoradores.ipynb
+++ b/exercicios/capitulo_06/decoradores.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Decoradores nada mais são do que função que recebe como argumento outra função e tem como objetivo alterar o comportamento da função recebida sem precisar reescreve-la"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -9,11 +18,114 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def soma():\n",
+    "    return 'Essa será uma função de soma.'\n",
+    "\n",
+    "def operacaoAritmetica(funcao):\n",
+    "    return funcao()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Execute a função"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Essa será uma função de soma.'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funcao_soma = soma()\n",
+    "funcao_soma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Essa será uma função de soma.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operacaoAritmetica(soma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def operacaoAritmetica2(funcao):\n",
+    "    def wrapper(*args):\n",
+    "        print(f'Antes da operação aritmética')\n",
+    "        operacao = funcao(*args)\n",
+    "        return operacao\n",
+    "    \n",
+    "    return wrapper\n",
+    "\n",
+    "@operacaoAritmetica2\n",
+    "def soma(*args):\n",
+    "    somatorio = sum(args)\n",
+    "    return somatorio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antes da operação aritmética\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soma(2, 3, 5, 6)"
    ]
   }
  ],
@@ -33,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
