--- a/exercicios/capitulo_06/funcoes.ipynb
+++ b/exercicios/capitulo_06/funcoes.ipynb
@@ -17,11 +17,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def operacaoAritmetica(numero1,numero2,operacao={'+', '-', '*', '/'}):\n",
+    "    resultado = (numero1 + numero2 if operacao == '+' else numero1 - numero2 if operacao == '-' else numero1 * numero2 if operacao == '*' else numero1 / numero2 if operacao == '/' else 'Operação Invalida')\n",
+    "    return resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(operacaoAritmetica(2,2,'+'))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Modifique a função para que receba uma quantidade de argumentos não previsível e os imprima na tela\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 6, 7, 1, 2, 3)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def operacaoAritmetica2(*numeros, **kwargs):\n",
+    "    return numeros\n",
+    "\n",
+    "operacaoAritmetica2(5,6,7,1,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((5, 6, 7, 1, 2, 3), {'operacao': '+', 'pet': 'gato'})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def operacaoAritmetica2(*numeros, **kwargs):\n",
+    "    return numeros, kwargs\n",
+    "\n",
+    "operacaoAritmetica2(5,6,7,1,2,3, operacao='+', pet='gato')"
    ]
   },
   {
@@ -33,11 +107,112 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def operacaoAritmetica3(*args, **kwargs):\n",
+    "    for argumento, valor in kwargs.items():\n",
+    "        if argumento == 'operacao' and valor == '+':\n",
+    "            return sum(args)\n",
+    "        elif argumento == 'operacao' and valor == '-':\n",
+    "            pass\n",
+    "        elif argumento == 'operacao' and valor == '*':\n",
+    "            return math.prod(args)        \n",
+    "        elif argumento == 'operacao' and valor == '/':\n",
+    "            pass\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operacaoAritmetica3(2,3,2,2,1, operacao='*')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def operacaoAritmetica4(*args, **kwargs):\n",
+    "        resultado = [ sum(args) if (argumento == 'operacao' and valor == '+') else math.prod(args)  if (argumento == 'operacao' and valor == '*') else 'Operação Invalida' for argumento, valor in kwargs.items() ]\n",
+    "        return resultado\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[24]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operacaoAritmetica4(2,3,2,2,1, operacao='*')\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Escreva uma função do tipo lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soma = lambda x, y: print(x + y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "soma(3, 8)"
    ]
   }
  ],
@@ -48,8 +223,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
