--- a/exercicios/capitulo_08/abrir_ler_escrever_arquivos.ipynb
+++ b/exercicios/capitulo_08/abrir_ler_escrever_arquivos.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conto = open('../dados/a_luta_carmen_dolores_trecho.txt', mode='r') #Esse comando abre, mas não fecha o arquivo\n",
+    "conto.close() #Solução 1"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -25,11 +35,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../dados/a_luta_carmen_dolores_trecho.txt', mode='r') as arquivo:\n",
+    "    linhas = arquivo.readlines()\n",
+    "    print(linhas)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie um for loop para ler cada item da lista e retirar as quebras de linha\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../dados/a_luta_carmen_dolores_trecho.txt', mode='r') as arquivo:\n",
+    "    linhas = arquivo.readlines()\n",
+    "    for linha in linhas:\n",
+    "        print(linha.strip())"
    ]
   },
   {
@@ -41,11 +74,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../dados/a_luta_carmen_dolores_trecho.txt', mode='a') as arquivo:\n",
+    "    arquivo.write('\\n\\nÚltima Linha')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Copie o conteúdo do arquivo \"dados/a_luta_carmen_dolores_trecho.txt\" para um novo arquivo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conto = open('../dados/a_luta_carmen_dolores_trecho.txt', mode='r')\n",
+    "\n",
+    "with open('../dados/copia_a_luta_carmen_dolores_trecho.txt', mode='w') as arquivo:\n",
+    "    linhas_conto = conto.readlines()\n",
+    "    arquivo.writelines(linhas_conto)\n",
+    "\n",
+    "conto.close()"
    ]
   }
  ],
@@ -56,8 +114,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
